# badminton_analysis

./: .gitignore  badminton_match_analyzer.tsx  build.sh  manage.py  peikee meixing - jiayifan zhangshuxian-1.csv  pyproject.toml  requirements.txt
api/: urls.py  utils.py  views.py
badminton_analysis/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FileUpload.tsx  PDFDownload.tsx  SetScoreInput.tsx
frontend/src/components/MatchAnalysis/: FinalResult.tsx  RallyList.tsx  index.tsx
frontend/src/components/MatchAnalysis/Statistics/: LastShotAnalysis.tsx  MomentumGraph.tsx  PlayerStats.tsx  RallyLengthAnalysis.tsx  SequenceAnalysis.tsx  WERatioAnalysis.tsx
frontend/src/types/: match.ts
