[project]
name = "badminton-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Chen Lee",email = "chen@coefficient.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "badminton_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
